<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_input_mode"
            android:orderInCategory="100"
            android:title="@string/menu_input_mode"
            />
        <item
            android:id="@+id/action_past_mode"
            android:orderInCategory="100"
            android:title="@string/menu_past_mode"
             />
        <item
            android:id="@+id/action_live_mode"
            android:orderInCategory="100"
            android:title="@string/menu_live_mode"
            />

    </group>

    <item android:id="@+id/action_heatmap"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/menu_heatmap" />

    <item android:id="@+id/action_volumemap"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/menu_volumemap" />

</menu>
